reformatted style.css

--- a/style.css
+++ b/style.css
@@ -108,8 +108,7 @@ input[type="text"] {
 }
 
 
-/* ------------------------------------------------------- */
-/* Responsiveness */
+/* Responsiveness --- --- --- --- ---*/
 
 @media (max-width: 800px) {
     #headerAndSearchContainer{
